test/compilable/test7886.d
// 7886

struct A {
	static assert (__traits(derivedMembers, A).length == 0);
}
