test/fail_compilation/fail208.d
// 1593

struct A {
}

A MakeA() {
        return ;
}

static const A aInstance = MakeA();


